math-api-full-project/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: math-api-service
spec:
  selector:
    app: math-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
