math-api-full-project/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: math-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: math.local
      http:
        paths:
          - path: /calculate
            pathType: Prefix
            backend:
              service:
                name: math-api-service
                port:
                  number: 80
